--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,12 +28,12 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
-file.reference.commons-dbcp2-2.1.1.jar=/Users/mac/Documents/NetbeansWorkspace/lib/commons-dbcp2-2.1.1.jar
-file.reference.commons-dbutils-1.6.jar=/Users/mac/Documents/NetbeansWorkspace/lib/commons-dbutils-1.6.jar
-file.reference.commons-logging-1.2.jar=/Users/mac/Documents/NetbeansWorkspace/lib/commons-logging-1.2.jar
-file.reference.commons-pool2-2.4.2.jar=/Users/mac/Documents/NetbeansWorkspace/lib/commons-pool2-2.4.2.jar
-file.reference.gson-2.3.1.jar=/Users/mac/Documents/NetbeansWorkspace/lib/gson-2.3.1.jar
-file.reference.mysql-connector-java-5.1.40-bin.jar=/Users/mac/Documents/NetbeansWorkspace/lib/mysql-connector-java-5.1.40-bin.jar
+file.reference.commons-dbcp2-2.1.1.jar=libs/commons-dbcp2-2.1.1.jar
+file.reference.commons-dbutils-1.6.jar=libs/commons-dbutils-1.6.jar
+file.reference.commons-logging-1.2.jar=libs/commons-logging-1.2.jar
+file.reference.commons-pool2-2.4.2.jar=libs/commons-pool2-2.4.2.jar
+file.reference.gson-2.3.1.jar=libs/gson-2.3.1.jar
+file.reference.mysql-connector-java-5.1.45-bin.jar=libs/mysql-connector-java-5.1.45-bin.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -53,7 +53,7 @@ javac.classpath=\
     ${file.reference.commons-logging-1.2.jar}:\
     ${file.reference.commons-pool2-2.4.2.jar}:\
     ${file.reference.gson-2.3.1.jar}:\
-    ${file.reference.mysql-connector-java-5.1.40-bin.jar}
+    ${file.reference.mysql-connector-java-5.1.45-bin.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -80,7 +80,6 @@ javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
 lib.dir=${web.docbase.dir}/WEB-INF/lib
-no.dependencies=false
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
 resource.dir=setup
